# fascode-utils-libcpp

./: CMakeLists.txt  README.md
include/: custom_exec.hpp  libfas.hpp
src/: CMakeLists.txt  libfas.cpp
test/: main.cpp
